Fix some alignments and values

--- a/styles.css
+++ b/styles.css
@@ -9,12 +9,15 @@ body {
     background-color: #111;
     color: white;
     text-align: center;
-    padding-top: 80px;  /* Extra space to prevent content from being hidden behind the nav */
-    padding-bottom: 80px; /* Extra space to prevent content from being hidden behind the footer */
+    padding-top: 80px;
+    /* Extra space to prevent content from being hidden behind the nav */
+    padding-bottom: 80px;
+    /* Extra space to prevent content from being hidden behind the footer */
 }
 
 section {
-    scroll-margin-top: 80px; /* Adjust to match your nav height */
+    scroll-margin-top: 80px;
+    /* Adjust to match your nav height */
 }
 
 /* Navigation Bar */
@@ -37,7 +40,7 @@ nav {
 
 nav>div {
     width: 90%;
-    max-width: 1200px;
+    max-width: 90%;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
@@ -119,13 +122,13 @@ nav ul li a:hover {
 }
 
 .social-links img {
-    width: 35px;
-    height: 35px;
+    width: 40px;
+    height: 40px;
     transition: transform 0.3s;
 }
 
 .social-links img:hover {
-    transform: scale(1.2);
+    transform: scale(1.25);
 }
 
 /* Resume Section */
@@ -157,7 +160,6 @@ nav ul li a:hover {
 /* Footer */
 footer {
     background-color: #008c8c;
-    padding: 10px;
     position: fixed;
     bottom: 0;
     left: 0;
@@ -166,15 +168,17 @@ footer {
     color: white;
     display: flex;
     align-items: center;
-    justify-content: center;
-    height: 50px;
+    justify-content: space-between;
+    height: 80px;
+    padding: 0 5%;
+    box-sizing: border-box;
+}
+
+.copyright {
+    margin: 0;
 }
 
 .back-to-top {
-    position: absolute;
-    right: 10%;
-    top: 50%;
-    transform: translateY(-50%);
     text-decoration: none;
     color: white;
     transition: transform 0.3s ease;
